# autofishing

./: .gitignore
autofishing/: VERSIONLOG.txt  do.sh
autofishing/demo/: DemoLog.cpp  Makefile  TwoLog.cpp  matchTmpl.cpp  readpixel.cpp
autofishing/src/: CMakeLists.txt  Makefile  Mouse.cpp  Mouse.h  RioLog.hpp  RioTick.hpp  State.h  TemplateMatch.cpp  TemplateMatch.h  TestTmpl.cpp  main.cpp  singleton.h
